--- a/index.html
+++ b/index.html
@@ -88,19 +88,19 @@
 
 <section id="exercicios">
   <h2>Exercícios Físicos</h2>
-  <img src="https://images.unsplash.com/photo-1599058917212-d750089bc07b" class="image" alt="Pessoa se exercitando ao ar livre">
+  <img src="PessoaSeExercitandoAoArLivre.jpg" class="image" alt="Pessoa se exercitando ao ar livre">
   <p>Mexer o corpo é essencial! Praticar exercícios regularmente fortalece os músculos, melhora o sistema cardiovascular, ajuda no controle de peso e libera hormônios do bem-estar. Você pode caminhar, correr, pedalar, nadar ou fazer treinos funcionais — o importante é se movimentar!</p>
 </section>
 
 <section id="sono">
   <h2>Importância do Sono</h2>
-  <img src="https://images.unsplash.com/photo-1506880018603-83d1f33f0c3b" class="image" alt="Pessoa dormindo tranquilamente">
+  <img src="PessoaDormindoTranquilamente.jpg" class="image" alt="Pessoa dormindo tranquilamente">
   <p>Dormir bem é fundamental para o corpo se recuperar e a mente funcionar direito. O ideal é manter uma rotina de sono com horários regulares e um ambiente calmo e escuro. Dormir mal pode causar irritabilidade, dificuldade de concentração e até problemas de saúde mais graves.</p>
 </section>
 
 <section id="mental">
   <h2>Saúde Mental</h2>
-  <img src="https://images.unsplash.com/photo-1508164014065-6c2b7b3a6e86" class="image" alt="Pessoa meditando na natureza">
+  <img src="PessoaMeditandoNaNatureza.jpg" class="image" alt="Pessoa meditando na natureza">
   <p>Cuidar da mente é tão importante quanto cuidar do corpo. Meditação, terapia, momentos de lazer, convívio com quem você gosta e autocuidado são formas de manter a saúde mental em dia. Não tenha medo de procurar ajuda quando precisar. Você merece paz e equilíbrio emocional.</p>
 </section>
 
