--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       font-size: 2rem;
       margin-bottom: 15px;
     }
-    section p {
+    section p, section li {
       font-size: 1.1rem;
       line-height: 1.7;
     }
@@ -64,6 +64,14 @@
       text-align: center;
       padding: 20px;
     }
+    ul {
+      padding-left: 20px;
+    }
+    hr {
+      margin: 40px 0;
+      border: none;
+      border-top: 2px solid #ccc;
+    }
   </style>
 </head>
 <body>
@@ -74,34 +82,100 @@
 </header>
 
 <nav>
-  <a href="#alimentacao">Alimentação</a>
-  <a href="#exercicios">Exercícios</a>
-  <a href="#sono">Sono</a>
-  <a href="#mental">Saúde Mental</a>
+  <a href="#introducao">Início</a>
+  <a href="#temas">Temas</a>
+  <a href="#dicas">Dicas</a>
+  <a href="#depoimentos">Depoimentos</a>
+  <a href="#eventos">Eventos</a>
 </nav>
 
-<section id="alimentacao">
-  <h2>Alimentação Equilibrada</h2>
-  <img src="https://images.unsplash.com/photo-1600891964599-f61ba0e24092" class="image" alt="Alimentos saudáveis">
-  <p>Uma boa alimentação é a base de uma vida saudável. Evite alimentos ultraprocessados e prefira frutas, legumes, verduras, proteínas magras e grãos integrais. Comer bem ajuda a manter o corpo funcionando corretamente, melhora o humor e previne doenças crônicas como diabetes e hipertensão.</p>
+<section id="introducao">
+  <h2>Bem-Estar e Saúde: Seu Portal para uma Vida Plena</h2>
+  <img src="https://images.unsplash.com/photo-1607746882042-944635dfe10e" class="image" alt="Pessoa sorrindo e saudável">
+  <p><em>Bem-vindo ao nosso site! Aqui, seu bem-estar é nossa prioridade.</em></p>
+  <p>Nosso objetivo é fornecer informações confiáveis, dicas práticas e inspiração para ajudá-lo a viver uma vida mais saudável e equilibrada. Acreditamos que o bem-estar envolve corpo, mente e alma, e estamos aqui para guiá-lo nessa jornada.</p>
 </section>
 
-<section id="exercicios">
-  <h2>Exercícios Físicos</h2>
-  <img src="PessoaSeExercitandoAoArLivre.jpg" class="image" alt="Pessoa se exercitando ao ar livre">
-  <p>Mexer o corpo é essencial! Praticar exercícios regularmente fortalece os músculos, melhora o sistema cardiovascular, ajuda no controle de peso e libera hormônios do bem-estar. Você pode caminhar, correr, pedalar, nadar ou fazer treinos funcionais — o importante é se movimentar!</p>
+<hr>
+
+<section id="temas">
+  <h2>Nossos Temas Principais</h2>
+
+  <h3>1. Nutrição Consciente</h3>
+  <img src="https://images.unsplash.com/photo-1600891964599-f61ba0e24092" class="image" alt="Alimentos saudáveis e coloridos">
+  <ul>
+    <li>Descubra receitas saudáveis e nutritivas que incentivam uma alimentação equilibrada.</li>
+    <li><strong>A Importância do Planejamento:</strong> Aprenda a planejar suas refeições com métodos práticos e dicas.</li>
+    <li><strong>Alimentos Funcionais e Superfoods:</strong> Explore ingredientes como spirulina, cúrcuma e chia.</li>
+  </ul>
+
+  <h3>2. Atividade Física</h3>
+  <img src="https://images.unsplash.com/photo-1571019613454-1cb2f99b2d8b" class="image" alt="Pessoa se exercitando ao ar livre">
+  <ul>
+    <li>Explore modalidades como yoga, pilates e treinos intensos com guias práticos.</li>
+    <li><strong>Encontre Seu Estilo:</strong> Encontre a atividade que combina com você.</li>
+    <li><strong>Dicas para Manter a Motivação:</strong> Técnicas e estratégias para criar um ambiente motivador.</li>
+  </ul>
+
+  <h3>3. Saúde Mental</h3>
+  <img src="https://images.unsplash.com/photo-1525097487452-6278ff080c31" class="image" alt="Pessoa meditando com serenidade">
+  <ul>
+    <li>Explore técnicas de relaxamento, meditação e estratégias para lidar com o estresse.</li>
+    <li><strong>Terapias e Práticas Alternativas:</strong> Como aromaterapia e acupuntura podem ajudar.</li>
+    <li><strong>Autoajuda e Crescimento Pessoal:</strong> Dicas de livros, podcasts e recursos transformadores.</li>
+  </ul>
+
+  <h3>4. Beleza Natural</h3>
+  <img src="https://images.unsplash.com/photo-1556228453-efd6c1ff04cd" class="image" alt="Mulher sorrindo com pele saudável">
+  <ul>
+    <li>Dicas de cuidados com a pele e cabelo usando ingredientes naturais.</li>
+    <li><strong>Rotinas de Beleza:</strong> Para diferentes tipos de pele, com saúde em primeiro lugar.</li>
+    <li><strong>O Poder da Alimentação na Beleza:</strong> Alimentos que promovem pele luminosa e cabelos fortes.</li>
+  </ul>
+
+  <h3>5. Vida Sustentável</h3>
+  <img src="https://images.unsplash.com/photo-1584277261225-78e0d3d69534" class="image" alt="Pessoa sorrindo em meio à natureza">
+  <ul>
+    <li>Como escolhas sustentáveis beneficiam sua saúde e o planeta.</li>
+    <li><strong>Dicas do Dia a Dia:</strong> Pequenas atitudes sustentáveis com grande impacto.</li>
+    <li><strong>Consumo Consciente:</strong> Escolha produtos que respeitam o meio ambiente.</li>
+  </ul>
 </section>
 
-<section id="sono">
-  <h2>Importância do Sono</h2>
-  <img src="PessoaDormindoTranquilamente.jpg" class="image" alt="Pessoa dormindo tranquilamente">
-  <p>Dormir bem é fundamental para o corpo se recuperar e a mente funcionar direito. O ideal é manter uma rotina de sono com horários regulares e um ambiente calmo e escuro. Dormir mal pode causar irritabilidade, dificuldade de concentração e até problemas de saúde mais graves.</p>
+<hr>
+
+<section id="dicas">
+  <h2>Dicas Práticas para o Seu Dia a Dia</h2>
+  <ul>
+    <li><strong>Comece o Dia com um Café da Manhã Nutritivo:</strong> Opte por fibras, proteínas e vitaminas.</li>
+    <li><strong>Momentos de Desconexão:</strong> Fique um tempo longe das telas e conecte-se consigo mesmo.</li>
+    <li><strong>Estabeleça Pequenas Metas de Exercícios:</strong> Ajustáveis e realistas para manter o foco.</li>
+    <li><strong>Aposte na Hidratação:</strong> Use apps para acompanhar sua ingestão de água.</li>
+    <li><strong>Crie um Espaço de Relaxamento em Casa:</strong> Um cantinho com plantas, luz suave e paz.</li>
+  </ul>
 </section>
 
-<section id="mental">
-  <h2>Saúde Mental</h2>
-  <img src="PessoaMeditandoNaNatureza.jpg" class="image" alt="Pessoa meditando na natureza">
-  <p>Cuidar da mente é tão importante quanto cuidar do corpo. Meditação, terapia, momentos de lazer, convívio com quem você gosta e autocuidado são formas de manter a saúde mental em dia. Não tenha medo de procurar ajuda quando precisar. Você merece paz e equilíbrio emocional.</p>
+<hr>
+
+<section id="depoimentos">
+  <h2>Depoimentos de Nossos Leitores</h2>
+  <p>“A implementação de hábitos saudáveis mudou minha vida. O conteúdo do site me inspira todos os dias a continuar focado no meu bem-estar. Estou mais consciente das minhas escolhas e isso faz toda a diferença.” — Ana L.</p>
+  <p>“Adorei as dicas de alimentação e o foco na saúde mental. Me ajudou a encontrar um equilíbrio que eu não sabia que precisava. Recomendo para todos que buscam qualidade de vida!” — Ricardo M.</p>
+</section>
+
+<hr>
+
+<section id="eventos">
+  <h2>Eventos e Workshops</h2>
+  <p>Participe de nossos eventos e workshops sobre saúde e bem-estar! Oferecemos palestras, aulas práticas e experiências imersivas para promover uma vida saudável. Fique atento à nossa agenda para não perder as próximas oportunidades.</p>
+</section>
+
+<hr>
+
+<section id="junte-se">
+  <h2>Junte-se a Nós!</h2>
+  <p>Nosso site é uma comunidade dedicada à promoção da saúde e bem-estar. Siga-nos nas redes sociais e inscreva-se em nossa newsletter para receber dicas exclusivas, conteúdos novos, receitas e muito mais!</p>
+  <p><strong>Sua jornada para uma vida plena e saudável começa aqui.</strong> Explore, descubra e transforme-se! Estamos ansiosos para acompanhá-lo nesta trajetória rumo ao bem-estar!</p>
 </section>
 
 <footer>
