--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
 <section id="introducao">
   <h2>Bem-Estar e Saúde: Seu Portal para uma Vida Plena</h2>
-  <img src="https://images.unsplash.com/photo-1607746882042-944635dfe10e" class="image" alt="Pessoa sorrindo e saudável">
+  <img src="PessoaSorrindoESaudavel" class="image" alt="Pessoa sorrindo e saudável">
   <p><em>Bem-vindo ao nosso site! Aqui, seu bem-estar é nossa prioridade.</em></p>
   <p>Nosso objetivo é fornecer informações confiáveis, dicas práticas e inspiração para ajudá-lo a viver uma vida mais saudável e equilibrada. Acreditamos que o bem-estar envolve corpo, mente e alma, e estamos aqui para guiá-lo nessa jornada.</p>
 </section>
@@ -102,7 +102,7 @@
   <h2>Nossos Temas Principais</h2>
 
   <h3>1. Nutrição Consciente</h3>
-  <img src="https://images.unsplash.com/photo-1600891964599-f61ba0e24092" class="image" alt="Alimentos saudáveis e coloridos">
+  <img src="ComidasSaudaveis" class="image" alt="Alimentos saudáveis e coloridos">
   <ul>
     <li>Descubra receitas saudáveis e nutritivas que incentivam uma alimentação equilibrada.</li>
     <li><strong>A Importância do Planejamento:</strong> Aprenda a planejar suas refeições com métodos práticos e dicas.</li>
@@ -110,7 +110,7 @@
   </ul>
 
   <h3>2. Atividade Física</h3>
-  <img src="https://images.unsplash.com/photo-1571019613454-1cb2f99b2d8b" class="image" alt="Pessoa se exercitando ao ar livre">
+  <img src="PessoaSeEcerxitandoAoArLivre" class="image" alt="Pessoa se exercitando ao ar livre">
   <ul>
     <li>Explore modalidades como yoga, pilates e treinos intensos com guias práticos.</li>
     <li><strong>Encontre Seu Estilo:</strong> Encontre a atividade que combina com você.</li>
@@ -118,7 +118,7 @@
   </ul>
 
   <h3>3. Saúde Mental</h3>
-  <img src="https://images.unsplash.com/photo-1525097487452-6278ff080c31" class="image" alt="Pessoa meditando com serenidade">
+  <img src="PessoaMeditandoNaNatureza" class="image" alt="Pessoa meditando com serenidade">
   <ul>
     <li>Explore técnicas de relaxamento, meditação e estratégias para lidar com o estresse.</li>
     <li><strong>Terapias e Práticas Alternativas:</strong> Como aromaterapia e acupuntura podem ajudar.</li>
@@ -126,7 +126,7 @@
   </ul>
 
   <h3>4. Beleza Natural</h3>
-  <img src="https://images.unsplash.com/photo-1556228453-efd6c1ff04cd" class="image" alt="Mulher sorrindo com pele saudável">
+  <img src="MulherSorrindoComPeleSaudavel" class="image" alt="Mulher sorrindo com pele saudável">
   <ul>
     <li>Dicas de cuidados com a pele e cabelo usando ingredientes naturais.</li>
     <li><strong>Rotinas de Beleza:</strong> Para diferentes tipos de pele, com saúde em primeiro lugar.</li>
@@ -134,7 +134,7 @@
   </ul>
 
   <h3>5. Vida Sustentável</h3>
-  <img src="https://images.unsplash.com/photo-1584277261225-78e0d3d69534" class="image" alt="Pessoa sorrindo em meio à natureza">
+  <img src="PessoaSorrindoEmMeioANatureza" class="image" alt="Pessoa sorrindo em meio à natureza">
   <ul>
     <li>Como escolhas sustentáveis beneficiam sua saúde e o planeta.</li>
     <li><strong>Dicas do Dia a Dia:</strong> Pequenas atitudes sustentáveis com grande impacto.</li>
