--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
   </ul>
 
   <h3>2. Atividade Física</h3>
-  <img src="PessoaSeEcerxitandoAoArLivre" class="image" alt="Pessoa se exercitando ao ar livre">
+   <img src="PessoaSeExercitandoAoArLivre.jpg" class="image" alt="Pessoa se exercitando ao ar livre">
   <ul>
     <li>Explore modalidades como yoga, pilates e treinos intensos com guias práticos.</li>
     <li><strong>Encontre Seu Estilo:</strong> Encontre a atividade que combina com você.</li>
