--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
   <h2>Nossos Temas Principais</h2>
 
   <h3>1. Nutrição Consciente</h3>
-  <img src="ComidasSaudaveis" class="image" alt="Alimentos saudáveis e coloridos">
+  <img src="ComidasSaudaveis.jpg" class="image" alt="Alimentos saudáveis e coloridos">
   <ul>
     <li>Descubra receitas saudáveis e nutritivas que incentivam uma alimentação equilibrada.</li>
     <li><strong>A Importância do Planejamento:</strong> Aprenda a planejar suas refeições com métodos práticos e dicas.</li>
@@ -118,7 +118,7 @@
   </ul>
 
   <h3>3. Saúde Mental</h3>
-  <img src="PessoaMeditandoNaNatureza" class="image" alt="Pessoa meditando com serenidade">
+  <img src="PessoaMeditandoNaNatureza.jpg" class="image" alt="Pessoa meditando com serenidade">
   <ul>
     <li>Explore técnicas de relaxamento, meditação e estratégias para lidar com o estresse.</li>
     <li><strong>Terapias e Práticas Alternativas:</strong> Como aromaterapia e acupuntura podem ajudar.</li>
@@ -126,7 +126,7 @@
   </ul>
 
   <h3>4. Beleza Natural</h3>
-  <img src="MulherSorrindoComPeleSaudavel" class="image" alt="Mulher sorrindo com pele saudável">
+  <img src="MulherSorrindoComPeleSaudavel.jpg" class="image" alt="Mulher sorrindo com pele saudável">
   <ul>
     <li>Dicas de cuidados com a pele e cabelo usando ingredientes naturais.</li>
     <li><strong>Rotinas de Beleza:</strong> Para diferentes tipos de pele, com saúde em primeiro lugar.</li>
@@ -134,7 +134,7 @@
   </ul>
 
   <h3>5. Vida Sustentável</h3>
-  <img src="PessoaSorrindoEmMeioANatureza" class="image" alt="Pessoa sorrindo em meio à natureza">
+  <img src="PessoaSorrindoEmMeioANatureza.jpg" class="image" alt="Pessoa sorrindo em meio à natureza">
   <ul>
     <li>Como escolhas sustentáveis beneficiam sua saúde e o planeta.</li>
     <li><strong>Dicas do Dia a Dia:</strong> Pequenas atitudes sustentáveis com grande impacto.</li>
