--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
 <section id="introducao">
   <h2>Bem-Estar e Saúde: Seu Portal para uma Vida Plena</h2>
-  <img src="PessoaSorrindoESaudavel" class="image" alt="Pessoa sorrindo e saudável">
+  <img src="PessoaSorrindoESaudavel.jpg" class="image" alt="Pessoa sorrindo e saudável">
   <p><em>Bem-vindo ao nosso site! Aqui, seu bem-estar é nossa prioridade.</em></p>
   <p>Nosso objetivo é fornecer informações confiáveis, dicas práticas e inspiração para ajudá-lo a viver uma vida mais saudável e equilibrada. Acreditamos que o bem-estar envolve corpo, mente e alma, e estamos aqui para guiá-lo nessa jornada.</p>
 </section>
