--- a/index.html
+++ b/index.html
@@ -18,21 +18,21 @@
     header {
       background-color: #2e7d32;
       color: white;
-      padding: 40px 20px;
+      padding: 20px 20px;
       text-align: center;
     }
-    header h1 {
-      margin: 0;
-      font-size: 2.8rem;
+    header img {
+      max-width: 180px;
+      height: auto;
     }
     nav {
       background-color: #a5d6a7;
-      padding: 10px 0;
+      padding: 15px 20px;
       text-align: center;
+      font-size: 1rem;
     }
-    nav a {
-      margin: 0 15px;
-      text-decoration: none;
+    nav p {
+      margin: 0;
       color: #1b5e20;
       font-weight: bold;
     }
@@ -77,16 +77,11 @@
 <body>
 
 <header>
-  <h1>Vida Saudável</h1>
-  <p>Transforme sua rotina com hábitos que fazem bem ao corpo e à mente</p>
+  <img src="logo.png" alt="Logo Vida Saudável">
 </header>
 
 <nav>
-  <a href="#introducao">Início</a>
-  <a href="#temas">Temas</a>
-  <a href="#dicas">Dicas</a>
-  <a href="#depoimentos">Depoimentos</a>
-  <a href="#eventos">Eventos</a>
+  <p>Transforme sua rotina com hábitos que fazem bem ao corpo e à mente</p>
 </nav>
 
 <section id="introducao">
