--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 <body>
 
 <header>
-  <img src="logo.png" alt="Logo Vida Saudável">
+  <img src="VidaSaudavel.jpg" alt="Logo Vida Saudável">
 </header>
 
 <nav>
