--- a/index.html
+++ b/index.html
@@ -177,10 +177,10 @@
 <section id="galeria">
   <h2 class="section-title">Galeria de Momentos</h2>
   <div class="gallery">
-    <img src="https://images.unsplash.com/photo-1529333166437-7750a6dd5a70" />
-    <img src="https://images.unsplash.com/photo-1517841905240-472988babdf9" />
-    <img src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e" />
-    <img src="https://images.unsplash.com/photo-1492562080023-ab3db95bfbce" />
+    <img src="imagens/nos1.jpg" />
+    <img src="imagens/nos2.jpg" />
+    <img src="imagens/nos3.jpg" />
+    <img src="imagens/nos4.jpg" />
   </div>
 </section>
 
@@ -244,3 +244,4 @@
 
 </body>
 </html>
+
