--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
       <p id="contador" style="font-size:18px;font-weight:600;"></p>
     </div>
   </div>
-  <img src="https://images.unsplash.com/photo-1529626455594-4ff0802cfb7e" alt="Casal">
+  <img src="imagens/nos1.jpg" alt="Nós dois">
 </section>
 
 <section id="historia">
@@ -244,4 +244,5 @@
 
 </body>
 </html>
+
 
