--- a/index.html
+++ b/index.html
@@ -189,12 +189,22 @@
   <p style="margin-top:10px;">Feito com ❤️ especialmente para você</p>
 </footer>
 
-<audio id="musica" autoplay loop>
+<audio id="musica" loop>
   <source src="musica.mp3" type="audio/mpeg">
-  Seu navegador não suporta áudio.
 </audio>
 
+  <button onclick="tocarMusica()">🎵 Tocar nossa música</button>
+
+
 <script>
+
+<button onclick="tocarMusica()">🎵 Tocar nossa música</button>
+  function tocarMusica(){
+    const audio = document.getElementById("musica");
+    audio.play();
+  }
+
+  
   const inicio = new Date(2024, 11, 22, 22, 30, 0);
   function atualizar() {
     const agora = new Date();
@@ -244,5 +254,6 @@
 
 </body>
 </html>
+
 
 
