--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
   <p style="margin-top:10px;">Feito com ❤️ especialmente para você</p>
 </footer>
 
-<audio id="musica" loop>
+<audio id="musica" autoplay loop>
   <source src="musica.mp3" type="audio/mpeg">
 </audio>
 
@@ -197,14 +197,6 @@
 
 
 <script>
-
-<button onclick="tocarMusica()">🎵 Tocar nossa música</button>
-  function tocarMusica(){
-    const audio = document.getElementById("musica");
-    audio.play();
-  }
-
-  
   const inicio = new Date(2024, 11, 22, 22, 30, 0);
   function atualizar() {
     const agora = new Date();
