--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
       <p id="contador" style="font-size:18px;font-weight:600;"></p>
     </div>
   </div>
-  <img src="https://images.unsplash.com/photo-1529626455594-4ff0802cfb7e" alt="Casal">
+  <img src="imagens/nos1.png" alt="Casal">
 </section>
 
 <section id="historia">
@@ -268,3 +268,4 @@
 
 </body>
 </html>
+
